-Xmx512m
To avoid « java.lang.IllegalArgumentException: System memory 468189184
must be at least 4.718592E8. Please use a larger heap size. »